[package]
name = "fon"
version = "0.6.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/fon"
homepage = "https://github.com/ardaku/fon/releases"
repository = "https://github.com/ardaku/fon"
readme = "README.md"
description = "Rust audio types, resampling, processing and mixing library."
keywords = [
    "audio",
    "resample",
    "processing",
    "sample",
    "sound",
]
categories = [
    "multimedia::audio",
    "multimedia",
    "algorithms",
    "data-structures",
    "no-std",
]
include = [
    "/LICENSE_APACHE",
    "/LICENSE_BOOST",
    "/LICENSE_MIT",
    "/README.md",
    "/src/*",
]

[dependencies]
libm = "0.2"
